--- a/Git1/index.html
+++ b/Git1/index.html
@@ -14,6 +14,11 @@
                 <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quas?</i></p>
             </div>
             <div>
+                <p>
+                    Added this paragraph
+                </p>
+            </div>
+            <div>
                 <p>This is unordered list:</p>
                 <ul>
                     <li>First point</li>
